--- a/tugas_day15.html
+++ b/tugas_day15.html
@@ -4,6 +4,78 @@
     <title>Multiple Choice</title>
 </head>
 <body>
-    
+    <center>
+        <form>
+            <h2>1. Siapakah Presiden pertama Republik Indonesia?</h2>
+            <input type="radio" name="nomor1" value=0> Prof.B.J.Habibie &nbsp;
+            <input type="radio" name="nomor1" value=0> Abdurrahman Wahid &nbsp;
+            <input type="radio" name="nomor1" value="benar"> Ir. Soekarno &nbsp;
+            <input type="radio" name="nomor1" value=0> Es Be Ye &nbsp;
+            <h2>2. Siapakah Presiden kedua Republik Indonesia?</h2>
+            <input type="radio" name="nomor2" value="salah" /> Prof.B.J.Habibie &nbsp;
+            <input type="radio" name="nomor2" value="salah" /> Abdurrahman Wahid &nbsp;
+            <input type="radio" name="nomor2" value="salah" /> Ir. Soekarno &nbsp;
+            <input type="radio" name="nomor2" value="benar" /> Jend. Soeharto &nbsp;
+            <h2>3. Siapakah Presiden ketiga Republik Indonesia?</h2>
+            <input type="radio" name="nomor3" value="benar" /> Prof.B.J.Habibie &nbsp;
+            <input type="radio" name="nomor3" value="salah" /> Abdurrahman Wahid &nbsp;
+            <input type="radio" name="nomor3" value="salah" /> Ir. Soekarno &nbsp;
+            <input type="radio" name="nomor3" value="salah" /> Es Be Ye &nbsp;
+            <h2>4. Siapakah Presiden keempat Republik Indonesia?</h2>
+            <input type="radio" name="nomor4" value="salah" /> Prof.B.J.Habibie &nbsp;
+            <input type="radio" name="nomor4" value="benar" /> Abdurrahman Wahid &nbsp;
+            <input type="radio" name="nomor4" value="salah" /> Ir. Soekarno &nbsp;
+            <input type="radio" name="nomor4" value="salah" /> Es Be Ye &nbsp;
+            <br>
+            <br>
+            <input type="button" value="Periksa" onclick="nilai()" >
+        </form>
+        <h2 id="hasil"></h2>
+    </center>
+
+    <script>
+        function nilai(){
+            var pilih = document.getElementsByName('nomor1')
+            var pilih2 = document.getElementsByName('nomor2')
+            var pilih3 = document.getElementsByName('nomor3')
+            var pilih4 = document.getElementsByName('nomor4')
+            var tot = 0
+            for(i=0; i<pilih.length; i++){
+                if(pilih[i].checked){
+                    pilih = pilih[i].value
+                    if(pilih == "benar"){
+                        tot += 25
+                    }
+                }
+            }
+            console.log(pilih)
+            for(j=0; j<pilih2.length; j++){
+                if(pilih2[j].checked){
+                    pilih2 = pilih2[j].value
+                    if(pilih2=='benar'){
+                        tot += 25
+                    }
+                }
+            }
+            for(k=0; k<pilih3.length; k++){
+                if(pilih3[k].checked){
+                    pilih3 = pilih3[k].value
+                    if(pilih3=='benar'){
+                        tot += 25
+                    }
+                }
+            }
+            for(l=0; l<pilih4.length; l++){
+                if(pilih4[l].checked){
+                    pilih4 = pilih4[l].value
+                    if(pilih4=='benar'){
+                        tot += 25
+                    }
+                }
+            }
+            console.log(tot)
+            document.getElementById("hasil").innerHTML  = tot 
+        }
+    </script>
 </body>
 </html>
